applications/pihole/31-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 8000
      targetPort: 80
      name: pihole-admin
    - port: 9617
      name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-dns
spec:
  selector:
    app: pihole
  type: LoadBalancer
  loadBalancerIP: 10.0.0.240
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-dns
spec:
  selector:
    app: pihole
  type: LoadBalancer
  loadBalancerIP: 10.0.0.240
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
