applications/pihole/30-routing.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - services:
        - name: pihole
          port: pihole-admin
      match: Host(`pi-hole.wesl.io`)
      kind: Rule
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 8000
      targetPort: 80
      name: pihole-admin
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-dns
spec:
  selector:
    app: pihole
  type: LoadBalancer
  loadBalancerIP: 10.0.0.240
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-dns
spec:
  selector:
    app: pihole
  type: LoadBalancer
  loadBalancerIP: 10.0.0.240
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
